Fix grid horizontal centering on Safari

--- a/assets/css/imports/grid.css
+++ b/assets/css/imports/grid.css
@@ -2,7 +2,7 @@
   display: grid;
   gap: var(--gutter);
   grid-template-columns: repeat(12, 1fr);
-  margin: 0 var(--margin);
+  margin: 0 auto;
   max-width: var(--max-width);
   place-self: center;
   width: calc(100% - calc(var(--margin) * 2));
